@@ -1892,6 +1892,12 @@ _SLICE1 = _SLICE2 = _SLICE_1_ARG
 def _SLICE3(oparg, operand, codeSource, code) :
     _popStackRef(code, operand, 3)
 
+def _STORE_SLICE0(oparg, operand, codeSource, code) :
+    # FIXME: can we check here if we're storing to something that supports
+    # slice assignment ?
+    _popStackRef(code, operand, 2)
+
+
 def _STORE_SLICE1(oparg, operand, codeSource, code) :
     # FIXME: can we check here if we're storing to something that supports
     # slice assignment ?
@@ -2135,7 +2141,6 @@ _PRINT_EXPR = _unimplemented
 _PRINT_NEWLINE_TO = _unimplemented
 
 _DELETE_SLICE0 = _unimplemented
-_STORE_SLICE0 = _unimplemented
 _STORE_SLICE3 = _unimplemented
 # FIXME: probably pop argument number of items ?
 _DUP_TOPX = _unimplemented
